<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseViewer">

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/viewToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton"
            android:textOff="@string/all_courses"
            android:textOn="@string/my_courses" />

        <EditText
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_name"
            android:inputType="text"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_code"
            android:inputType="textShortMessage|textCapCharacters"
            android:minHeight="50dp" />

        <Spinner
            android:id="@+id/Day"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/what_day" />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:scrollbars="vertical" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>