<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseEditor">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basic_details"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="5"
                android:text="@string/course_name_item"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/CourseName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/course_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2.2"
                android:text="@string/course_code_item"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/CourseCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/course_code"
                android:importantForAutofill="no"
                android:inputType="textShortMessage|textCapCharacters" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/DeleteCourse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/EditCourse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>